--- a/Front/blogAngular/src/index.html
+++ b/Front/blogAngular/src/index.html
@@ -12,6 +12,7 @@
     />
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <script> var __importDefault = (this && this.__importDefault) || function (mod) { return (mod && mod.__esModule) ? mod : { "default": mod }; }</script>
   </head>
   <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="/">Home</a>
